[package]
name = "caring"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-backtrace = "0.2.6"
bincode = "1.3.3"
curve25519-dalek = { version = "4.1.1", features = ["group", "serde"] }
derive_more = "0.99.17"
digest = "0.10.7"
ff = { version = "0.13.0", features = ["derive"] }
fixed = "2.0.0-alpha.11"
futures = "0.3.28"
group = "0.13.0"
itertools = "0.11.0"
num-traits = "0.2.16"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["rc"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-util = { version = "0.7.9", features = ["io", "net", "io-util", "codec", "full"] }

[features]
rayon = []
