[package]
name = "caring"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = ["wecare", "pycare", "ccare"]

[dependencies]
bincode = "1.3.3"
derive_more = "0.99.17"
digest = "0.10.7"
ff = { version = "0.13.0", features = ["derive"] }
fixed = "2.0.0-alpha.11"
futures = "0.3.28"
futures-concurrency = "7.6.0"
group = "0.13.0"
itertools = "0.12"
num-traits = "0.2.16"
overload = "0.1.1"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io", "net", "io-util", "codec", "full"] }
tracing = "0.1.40"

[dev-dependencies]
tokio-test = "0.4.4"
curve25519-dalek = { version = "4.1.1", features = ["group", "serde"] }
sha2 = "0.10.8"

[features]
rayon = []

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
