[package]
name = "pycare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "caring"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py37", "generate-import-lib", "extension-module"]}
pyo3-log = "0.11.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wecare = { path = "../wecare" }
