[package]
name = "pycare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "caring"
crate-type = ["cdylib"]

[dependencies]
futures-concurrency = "7.6.1"
pyo3 = { version = "0.22", features = ["abi3-py37", "generate-import-lib", "extension-module"]}
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wecare = { path = "../wecare" }
