[package]
name = "wecare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caring = { path = ".." }
tokio = { version = "1.33.0", features = ["full"] }
curve25519-dalek = { version = "4.1.1", features = ["group", "serde"] }
rand = "0.8.5"
fixed = "2.0.0-alpha.11"

[dev-dependencies]
tempfile = "3.10.1"
