[package]
name = "wecare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caring = { path = ".." }
tokio = { version = "1.33.0", features = ["full"] }
curve25519-dalek = { version = "4.1.3", features = ["group", "serde"] }
rand = "0.8.5"
fixed = "2.0.0-alpha.11"
enum_dispatch = "0.3.13"
ff = "0.13.0"
castaway = "0.2.3"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.10.1"

[[bench]]
name = "spdz-25519"
harness = false

[[bench]]
name = "shamir-25519"
harness = false
