[package]
name = "wecare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caring = { path = ".." }
tokio = { version = "1.33.0", features = ["full"] }
curve25519-dalek = { version = "4.1.3", features = ["group", "serde"] }
rand = "0.8.5"
fixed = "2.0.0-alpha.28.0"
ff = "0.13.0"
tracing = "0.1.40"

[dev-dependencies]
tracing-forest = { version = "0.1.6", features = ["full"] }
caring = { path = "..", features = ["test"]}
tokio-test = "0.4.4"
criterion = "0.5.1"
tempfile = "3.10.1"

[[bench]]
name = "spdz-25519"
harness = false

[[bench]]
name = "shamir-25519"
harness = false
